--- a/public/styles/scss/partials/_dashboard.scss
+++ b/public/styles/scss/partials/_dashboard.scss
@@ -2,7 +2,6 @@
   display: flex;
 }
 .dashboard {
-
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -16,7 +15,7 @@
   // margin-top: 4rem;
   h3 {
     margin-top: 1rem;
-  font-weight: normal;
+    font-weight: normal;
   }
   section {
     div {
@@ -32,18 +31,17 @@
         text-align: center;
       }
       ul {
-        overflow:auto;
         text-align: center;
         width: 45vw;
         height: 80vh;
-        background-color: rgba($color: #000000, $alpha: .5);
+        background-color: rgba($color: #000000, $alpha: 0.5);
         border-radius: 30px;
         font-size: 2.5rem;
         font-family: mont-light;
         list-style-type: none;
-        li{
-          padding-top: 2rem;
-          a{
+        li {
+          padding-top: 1.3rem;
+          a {
             height: 5rem;
             margin: auto;
             display: flex;
@@ -52,26 +50,26 @@
             text-decoration: none;
             width: 20rem;
             color: white;
-      border-radius: 4px;
+            border-radius: 4px;
           }
         }
       }
     }
   }
 }
-.containero{
+.containero {
   display: flex;
   justify-content: space-evenly;
 }
-.logout{
+.logout {
   width: 100%;
   a {
-      background-color: red;
-    }
+    background-color: red;
+  }
 }
 .play {
   width: 100%;
-  a{
-    background-color: #E79F0D;
+  a {
+    background-color: #e79f0d;
   }
 }
